Udpate rico lib